--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ certifi==2015.11.20.1
 cffi==1.5.0
 gunicorn==19.4.5
 itsdangerous==0.24
+psycopg2==2.6.1
 pycparser==2.14
 python-dateutil==2.4.2
 python-editor==0.5
